// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tabs/> matches snapshot 1`] = `
<div>
  <section
    class="tabs css-3ghqkg-container"
    id="tab-1"
  >
    <div
      class="nav-wrapper"
    >
      <nav
        class="css-iytb73-tabsHeader-tabsHeader"
        role="tablist"
      >
        <a
          aria-controls="content-0"
          class="tab-link selected css-xyfmbj-tabNavItem-tabNavItem"
          href="#tab-0"
          id="tab-0"
          data-testid="tab-0-tab"
          role="tab"
        >
          Tab 1
        </a>
        <a
          aria-controls="content-1"
          class="tab-link css-a3wd5z-tabNavItem-tabNavItem"
          href="#tab-1"
          id="tab-1"
          data-testid="tab-1-tab"
          role="tab"
        >
          Tab 2
        </a>
        <a
          aria-controls="content-2"
          class="tab-link css-a3wd5z-tabNavItem-tabNavItem"
          href="#tab-2"
          id="tab-2"
          data-testid="tab-2-tab"
          role="tab"
        >
          Tab 3
        </a>
      </nav>
    </div>
    <section
      aria-live="polite"
      id="content"
      role="region"
    >
      <article
        id="content-0"
        role="tabpanel"
      >
        Test tab 1
      </article>
    </section>
  </section>
</div>
`;

exports[`<Tabs/> matches snapshot with stickyHeader 1`] = `
<div>
  <section
    class="css-3ghqkg-container"
  >
    <div
      class="nav-wrapper"
    >
      <nav
        class="css-sofwhp-tabsHeader-tabsHeader"
        role="tablist"
      >
        <a
          aria-controls="content-0"
          class="tab-link selected css-xyfmbj-tabNavItem-tabNavItem"
          href="#tab-0"
          id="tab-0"
          data-testid="tab-0-tab"
          role="tab"
        >
          Tab 1
        </a>
        <a
          aria-controls="content-1"
          class="tab-link css-a3wd5z-tabNavItem-tabNavItem"
          href="#tab-1"
          id="tab-1"
          data-testid="tab-1-tab"
          role="tab"
        >
          Tab 2
        </a>
        <a
          aria-controls="content-2"
          class="tab-link css-a3wd5z-tabNavItem-tabNavItem"
          href="#tab-2"
          id="tab-2"
          data-testid="tab-2-tab"
          role="tab"
        >
          Tab 3
        </a>
      </nav>
    </div>
    <section
      aria-live="polite"
      id="content"
      role="region"
    >
      <article
        id="content-0"
        role="tabpanel"
      >
        Test tab 1
      </article>
    </section>
  </section>
</div>
`;
